--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,7 @@ mod = nls(value ~ a + (b- g*day)*((1/(1+exp((c-day)/d))) - (1/(1+exp((e-day)/f))
 
 #Plot data, and fitted values
 plot(dat2$day, dat2$value, pch=20, xlab="Day of year",ylab="Dominant period")
-points(dat2$day, fitted(mod), pch=20, col="red", lwd=4, type="l")
+points(dat2$day, fitted(mod), pch=20, col="red", lwd=4)
 abline(v=c(coef(mod)[3],coef(mod)[5]))
 ```
 
