--- a/README.Rmd
+++ b/README.Rmd
@@ -68,8 +68,9 @@ mod = nls(value ~ a + (b- g*day)*((1/(1+exp((c-day)/d))) - (1/(1+exp((e-day)/f))
              algorithm="port",control = list(maxiter = 500), data=dat2, weights=dat2$weights^2)
 
 #Plot data, and fitted values
-plot(dat2$day, dat2$value, pch=20, xlab="Day of year",ylab="Dominant period")
-points(dat2$day, fitted(mod), pch=20, col="red", lwd=4)
+#Units are in tenths of seconds, so divide by 10 to convert to seconds
+plot(dat2$day, dat2$value/10, pch=20, xlab="Day of year",ylab="Dominant period")
+points(dat2$day, fitted(mod)/10, pch=20, col="red", lwd=4)
 abline(v=c(coef(mod)[3],coef(mod)[5]))
 ```
 
